--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,20 @@
 
 export(fetch_tcga_dataset)
 export(list_diseases)
-importFrom(MultiAssayExperiment,colData)
-importFrom(MultiAssayExperiment,mergeReplicates)
-importFrom(MultiAssayExperiment,sampleMap)
+importFrom(SummarizedExperiment,"assays<-")
+importFrom(SummarizedExperiment,"colData<-")
+importFrom(SummarizedExperiment,"rowData<-")
+importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,assays)
-importFrom(TCGAutils,splitAssays)
-importFrom(curatedTCGAData,curatedTCGAData)
+importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowData)
+importFrom(TCGAbiolinks,GDCdownload)
+importFrom(TCGAbiolinks,GDCprepare)
+importFrom(TCGAbiolinks,GDCquery)
 importFrom(dplyr,as_tibble)
-importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
-importFrom(purrr,safely)
 importFrom(rlang,.data)
 importFrom(rlang,abort)
