Compute the sequencing depth

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(fetch_tcga_dataset)
 export(list_diseases)
 export(most_variable_profiles)
 export(purge_dataset_cache)
+export(sequencing_depth)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,"rowData<-")
