Compute sequencing depth

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     rappdirs,
     TCGAutils,
     stats,
-    utils
+    utils,
+    tibble
 RoxygenNote: 7.0.2
 Suggests:
     testthat (>= 2.1.0)
