--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(fetch_tcga_dataset)
 export(list_diseases)
 export(most_variable_profiles)
+export(normalize_by_depth)
 export(purge_dataset_cache)
 export(sequencing_depth)
 importFrom(SummarizedExperiment,"assays<-")
