Compute gene medians and deviations

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,9 @@ Imports:
     TCGAutils,
     stats,
     utils,
-    tibble
+    tibble,
+    matrixStats,
+    assertthat
 RoxygenNote: 7.0.2
 Suggests:
     testthat (>= 2.1.0)
