Hide entries not corresponding with actual diseases

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(TCGAbiolinks,GDCquery)
 importFrom(assertthat,are_equal)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,as_tibble)
+importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
