--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "gabriele.sales@unipd.it",
            comment = c(ORCID = "0000-0003-2078-5661"))
 Description: Collection of utility functions and data to be used in the
-    "Omics Data" course for the Molecular Genetics degree.
+    "Omics Data" course.
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
