--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: omicsdata
 Title: Support package for the "Omics Data" course
-Version: 0.5.0
+Version: 0.6.0
 Authors@R:
     person(given = "Gabriele",
            family = "Sales",
@@ -24,7 +24,8 @@ Imports:
     tibble,
     matrixStats,
     assertthat,
-    rvest
+    rvest,
+    gplots
 biocViews: Homo_sapiens_Data, ReproducibleResearch, CancerData, ExpressionData
 RoxygenNote: 7.1.2
 Suggests:
